@@ -1,3 +1,7 @@
+20100409
+ - (dtucker) [contrib/cygwin/Makefile] Don't overwrite files with the wrong
+   ones.  Based on a patch from Roumen Petrov.
+
 20100326
  - (djm) [openbsd-compat/bsd-arc4random.c] Fix preprocessor detection
    for arc4random_buf() and arc4random_uniform(); from Josh Gilkerson
